fix: align center talbe and reduce table

--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,7 @@
 .h1Titulo{
     margin-top: 30px;
     margin-bottom: 30px;
-    font-size: 60px;
+    font-size: 30px;
 }
 
 /* .h2{
